# cosap

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Untitled.ipynb  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  required_files.txt  requirements.txt  setup.py  test_pipeline.py
.github/workflows/: main.yml
cosap/: __init__.py  _cli.py  _config.py  _config_builder.py  _containers.py  _cosap.py  _docker_images.py  _formats.py  _library_paths.py  _pipeline_config.py  _utils.py  _version.py
cosap/annotators/: __init__.py  _annotator_factory.py  _annotators.py  _annotsv_annotator.py  _annovar_annotator.py  _cancervar_annotatator.py  _ensembl_vep_annotator.py  _intervar_annotator.py  _pharmcat_annotator.py
cosap/celery/: celery.py  celeryconfig.py
cosap/cnv_callers/: __init__.py  _cnv_caller_factory.py  _cnv_callers.py  _cnvkit_cnv_caller.py
cosap/default_pipelines/: __init__.py  _default_pipelines.py
cosap/file_downloader/: __init__.py  download_files.py  downloadable_file.py  file_downloader.py  files.json  files.py
cosap/gene_fusion_callers/: __init__.py  _gene_fusion_caller_factory.py  _gene_fusion_callers.py  _genefuse_fusion_caller.py
cosap/logger/: _logger.py
cosap/mappers/: __init__.py  _bowtie_mapper.py  _bwa2_mapper.py  _bwa_mapper.py  (+2 more)
environemnts/: strelka.yaml
environments/: deepvariant_environment.yml  default_environment.yml  py2_environment.yaml
examples/: README.md  example_run.py
focsan/: __init__.py  _config.py  _library_paths.py  _pipeline_config.py  _utils.py
snakemake_workflows/: Snakefile  config.yaml
(+205 files in other folders)
